@@ -2,6 +2,8 @@
 Backport Changes since U-Boot 1.1.2:
 ======================================================================
 
+* Add MACH_TYPE record for apollon board
+
 * Add MACH_TYPE records for several AT91 boards
 
 * Add support for Prodrive PDNB3 board
